Corrections on style

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import { SITE_TITLE } from "../consts";
 ---
 
 <header
-	class="sticky top-0 z-50 backdrop-blur-md bg-white/70 dark:bg-gray-900/80 shadow-sm"
+	class="sticky top-0 z-50 backdrop-blur-md bg-white/70 dark:bg-white-900/80 shadow-sm"
 >
 	<div class="container mx-auto px-4 sm:px-6">
 		<nav class="flex items-center justify-between h-16">
@@ -51,7 +51,7 @@ import { SITE_TITLE } from "../consts";
 
 				<div class="social-links flex items-center ml-4">
 					<a
-						href="https://github.com/withastro/astro"
+						href="https://github.com/fergm04/blog-test"
 						target="_blank"
 						class="text-gray-600 dark:text-gray-300 hover:text-blue-600 transition duration-200 p-2"
 					>
@@ -72,23 +72,23 @@ import { SITE_TITLE } from "../consts";
 			<div class="flex flex-col space-y-2">
 				<HeaderLink
 					href="/"
-					class="px-4 py-2 rounded hover:bg-gray-100 dark:hover:bg-gray-800"
+					class="text-white px-4 py-2 rounded hover:bg-gray-100 bg-[rgb(208,219,255)]-800"
 					>Home</HeaderLink
 				>
 				<HeaderLink
 					href="/blog"
-					class="px-4 py-2 rounded hover:bg-gray-100 dark:hover:bg-gray-800"
+					class="text-white px-4 py-2 rounded hover:bg-gray-100 dark:hover:bg-[rgb(208,219,255)]-800"
 					>Blog</HeaderLink
 				>
 				<HeaderLink
 					href="/resources"
-					class="px-4 py-2 rounded hover:bg-gray-100 dark:hover:bg-gray-800"
+					class="text-white px-4 py-2 rounded hover:bg-gray-100 dark:hover:bg-[rgb(208,219,255)]-800"
 					>Resources</HeaderLink
 				>
 
 				<div class="social-links flex items-center px-4 py-2">
 					<a
-						href="https://github.com/withastro/astro"
+						href="https://github.com/fergm04/blog-test"
 						target="_blank"
 						class="text-gray-600 dark:text-gray-300 hover:text-blue-600"
 					>
