--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,14 +14,14 @@ import Layout from "../layouts/Layout.astro";
 				adicciones en el estado de Oaxaca.
 			</p>
 			<img
-				src="/images/oaxaca-hero.jpg"
+				src="images/oaxaca-hero.jpg"
 				alt="Vista de Oaxaca"
 				class="mt-10 rounded-lg shadow-lg w-full max-w-4xl mx-auto"
 			/>
 			<div class="mt-8 flex justify-center space-x-4">
 				<a
 					href="/blog"
-					class="bg-blue-600 text-white px-6 py-3 rounded-md hover:bg-blue-700 transition"
+					class="bg-blue-600 !text-white px-6 py-3 rounded-md hover:bg-blue-700 transition"
 					>Leer el Blog</a
 				>
 				<a
