Extra mods - Change colors - Change icons - Correction on prop title -> pageTitle

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,11 @@ import { SITE_TITLE } from "../consts";
 						href="/"
 						class="text-blue-600 dark:text-blue-400 hover:text-blue-700 dark:hover:text-blue-300 transition duration-200"
 					>
-						{SITE_TITLE}
+						<img
+							src="/tec.png"
+							alt="Logo Escuela"
+							class="h-auto max-h-[55px] w-auto object-contain"
+						/>
 					</a>
 				</h2>
 			</div>
