--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Addiction: A Challenge for Oaxacan Society" activePage="blog">
+<Layout pageTitle="Addiction: A Challenge for Oaxacan Society" activePage="blog">
   <main class="blog-main">
     <div class="toc-container">
       <div class="toc">
