--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Inicio - Blog sobre Adicciones en Oaxaca">
+<Layout pageTitle="Inicio - Blog sobre Adicciones en Oaxaca">
 	<section class="bg-white text-gray-900">
 		<div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8 text-center">
 			<h1 class="text-4xl font-bold tracking-tight sm:text-5xl">
@@ -21,7 +21,7 @@ import Layout from "../layouts/Layout.astro";
 			<div class="mt-8 flex justify-center space-x-4">
 				<a
 					href="/blog"
-					class="bg-blue-600 !text-white px-6 py-3 rounded-md hover:bg-blue-700 transition"
+					class="bg-[#1d3557] !text-white px-6 py-3 rounded-md hover:bg-[#457b9d] transition"
 					>Leer el Blog</a
 				>
 				<a
