--- a/src/pages/resources.astro
+++ b/src/pages/resources.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Recursos sobre Adicciones - Oaxaca" activePage="recursos">
+<Layout pageTitle="Recursos sobre Adicciones - Oaxaca" activePage="recursos">
   <main class="recursos-main">
     <div class="recursos-header">
       <h1>Recursos</h1>
