--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Layout from "../layouts/Layout.astro";
 				adicciones en el estado de Oaxaca.
 			</p>
 			<img
-				src="images/oaxaca-hero.jpg"
+				src="images/oaxaca-hero.webp"
 				alt="Vista de Oaxaca"
 				class="mt-10 rounded-lg shadow-lg w-full max-w-4xl mx-auto"
 			/>
