Changes in padding of the Footer, and translate some text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,11 +7,11 @@ import Layout from "../layouts/Layout.astro";
 	<section class="bg-white text-gray-900">
 		<div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8 text-center">
 			<h1 class="text-4xl font-bold tracking-tight sm:text-5xl">
-				Adicciones en Oaxaca: Un Problema Real
+				Addictions in Oaxaca: A Real Problem
 			</h1>
 			<p class="mt-4 text-xl text-gray-600">
-				Un espacio académico para reflexionar, informar y actuar frente a las
-				adicciones en el estado de Oaxaca.
+				It is necessary to reflect, inform, and act about addictions in the
+				state of Oaxaca.
 			</p>
 			<img
 				src="images/oaxaca-hero.webp"
@@ -22,12 +22,12 @@ import Layout from "../layouts/Layout.astro";
 				<a
 					href="/blog"
 					class="bg-[#1d3557] !text-white px-6 py-3 rounded-md hover:bg-[#457b9d] transition"
-					>Leer el Blog</a
+					>Read the Blog</a
 				>
 				<a
 					href="/resources"
 					class="bg-gray-200 text-gray-800 px-6 py-3 rounded-md hover:bg-gray-300 transition"
-					>Recursos Informativos</a
+					>Informative Resources</a
 				>
 			</div>
 		</div>
