--- a/src/pages/resources.astro
+++ b/src/pages/resources.astro
@@ -158,7 +158,7 @@ import Layout from "../layouts/Layout.astro";
         <div class="lineas-ayuda">
           <div class="linea-card">
             <h3>Salud Mental y Adicciones</h3>
-            <p class="telefono"><strong>01 800 911 2000</strong></p>
+            <p class="telefono"><strong>800 911 2000</strong></p>
             <p>
               Atención para situaciones de crisis relacionadas con adicciones.
             </p>
