--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,25 +9,24 @@ import { SITE_TITLE } from "../consts";
 	<div class="container mx-auto px-4 sm:px-6">
 		<nav class="flex items-center justify-between h-16">
 			<div class="flex-shrink-0">
-				<h2 class="text-xl font-bold">
+				<h2>
 					<a
 						href="/"
-						class="text-blue-600 dark:text-blue-400 hover:text-blue-700 dark:hover:text-blue-300 transition duration-200"
 					>
 						<img
 							src="/tec.png"
 							alt="Logo Escuela"
-							class="h-13 max-h-13 w-auto object-contain"
+							class="object-contain h-10 w-10 mt-1.5"
 						/>
 					</a>
 				</h2>
 			</div>
 
 			<!-- Menú para móvil (hamburguesa) -->
-			<div class="md:hidden">
+			<div class="md:hidden pr-4">
 				<button
 					id="menu-toggle"
-					class="text-gray-700 dark:text-gray-200 hover:text-blue-600 focus:outline-none transition duration-300"
+					class="text-blue-700 dark:text-[#457b9d] hover:text-blue-600 focus:outline-none transition duration-300"
 					aria-label="Menú"
 				>
 					<div class="hamburger-icon w-6 h-6 relative">
