--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout pageTitle="Inicio - Blog sobre Adicciones en Oaxaca">
+<Layout pageTitle="Home - Blog about Addictions in Oaxaca">
 	<section class="bg-white text-gray-900">
 		<div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8 text-center">
 			<h1 class="text-4xl font-bold tracking-tight sm:text-5xl">
@@ -14,7 +14,7 @@ import Layout from "../layouts/Layout.astro";
 				state of Oaxaca.
 			</p>
 			<img
-				src="images/oaxaca-hero.webp"
+				src="images/cigarette.webp"
 				alt="Vista de Oaxaca"
 				class="mt-10 rounded-lg shadow-lg w-full max-w-4xl mx-auto"
 			/>
